--- a/002 - my-app/angular.json
+++ b/002 - my-app/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "my-app"
+    }
+  },
+  "defaultProject": "my-app",
+  "cli": {
+    "analytics": "9f539020-e212-4c8c-93f8-4cb65585f431"
+  }
 }
